--- a/our-team/index.html
+++ b/our-team/index.html
@@ -93,29 +93,44 @@
             Mission
           </div>
           <span class="header__text-box--description">
-            Become the world’s leading direct selling company by providing livelihood for sales leaders than any other.
+            To nurture a happy, safe & welcoming community where children are equipped with positive attitudes, skills
+            & knowledge to enable them to enjoy their childhood & to server as a foundation for their future
+            development.
           </span>
         </span>
       </div>
 
+      <!-- Org Chart -->
       <div class="orgchart">
 
         <!-- Main Office -->
+        <div class="main-office">
+          <div class="main-office--title">
+            Main Office Administration
+          </div>
+        </div>
+
         <div id="manager" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Owner and Manager
-          </div>
-          <div class="orgchart__textbox--name">
-            Dr Wiravan Mooltripakdee
+            <img src="../img/org chart/main office/Dr-Wiravan-Mooltripakdee.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Dr Wiravan Mooltripakdee<br>
+              <span class="info">
+                Owner and Manager
+              </span>
+            </div>
           </div>
         </div>
 
         <div id="assistant-manager" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
-            Assistant Manager
-          </div>
-          <div class="orgchart__textbox--name">
-            Dr Nissakorn Phimthong
+            <img src="../img/org chart/main office/Dr-Nissakorn-Phimthong.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Dr Nissakorn Phimthong<br>
+              <span class="info">
+                Assistant Manager
+              </span>
+            </div>
           </div>
         </div>
 
@@ -558,7 +573,7 @@
             </div>
           </div>
         </div>
-        
+
         <div id="year11" class="orgchart__textbox">
           <div class="orgchart__textbox--position">
             <img src="../img/org chart/ks4/Jeannette-Willcock.jpg" alt="">
@@ -572,8 +587,148 @@
         </div>
         <!-- End of KS4 Teachers -->
 
+        <!-- Primary Subject Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Primary Subject Teachers
+          </div>
+        </div>
+
+        <div id="primaryPE1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Julian-Madison.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Julian Madison<br>
+              <span class="info">
+                Physical Education (PE)
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="primaryPE2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Matthew-Bomberger.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Matthew Bomberger<br>
+              <span class="info">
+                Physical Education (PE)
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="primaryThai1" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Walailak-Chompoowiset.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Walailak Chompoowiset<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="primaryThai2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Siriporn-Nanpanak.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Siriporn Nanpanak<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="primaryThai3" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Patcharee-Onsing.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Patcharee Onsing<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="primaryThai4" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Siriwan-Tanwong.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Siriwan Tanwong<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="primaryThai5" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/primary subject/Apinya-Arunruang.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Apinya Arunruang<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <!-- End of Primary Subject Teachers -->
+
+        <!-- Secondary Subject Teachers -->
+        <div class="teaching-staff">
+          <div class="teaching-staff--title">
+            Secondary Subject Teachers
+          </div>
+        </div>
+
+        <div id="secondaryThai" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/secondary subject/Suparada-Wiyabun.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Suparada Wiyabun<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="secondaryThai2" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/secondary subject/Gonggidagorn-Boonsaeng.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Gonggidagorn Boonsaeng<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div id="secondaryThai3" class="orgchart__textbox">
+          <div class="orgchart__textbox--position">
+            <img src="../img/org chart/secondary subject/Kavinnat-Honyam.jpg" alt="">
+            <div class="orgchart__textbox--name">
+              Kavinnat Honyam<br>
+              <span class="info">
+                Thai Language
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <!-- End of Secondary Subject Teachers -->
+
       </div>
-    </div>
+      <!-- End of Org Chart -->
+
+    </div> <!-- End Container -->
     <!-- End of Organizational Chart 2018 - 2019 -->
 
     <div class="three-links">
