updated admissions page

--- a/admissions/index.html
+++ b/admissions/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/layout.css">
+  <link rel="stylesheet" href="../assets/css/admissions.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
@@ -59,7 +60,7 @@
 
   <header class="sub-header-image">
     <figure>
-        <img src="../img/admission.jpg" alt="">
+      <img src="../img/admission.jpg" alt="">
       <figcaption class="container">
         <span class="sub-header-location">Main Office</span>
       </figcaption>
@@ -68,41 +69,307 @@
   </header>
 
   <main role="main">
-    <article class="container">
-      <h1>Admissions Procedure</h1>
-      <p>Generally, we assess children for Admission on an individual case by case basis.For Primary School and Middle School, it may be necessary for children to take a reading and writing test. This is because in primary school children need to have at least a basic English reading and writing ability and at middle school they should have mastered these skills. This will be determined by the class teacher.</p>
-      <p>The English curriculum is quite disciplined and fast moving with strict standards. The mode of teaching and learning is English Language for all curriculum subjects. Apart from the reading and writing test, children may be invited to observe the class for which they wish to enroll. This is so that your child can get a feel for the class and its ability, and for the Class Teacher to make an assessment.</p>
-      <h4>Photo and Document Requirements from New Children</h4>
-      <ul>
-        <li>Four photos (3.5 x 4.5 cm)</li>
-        <li>1 copy of Child’s Passport or Birth Certificate</li>
-        <li>1 copy of House Registration Book (Thai Blue Book)</li>
-        <li>1 copy of Parent’s Passport or ID card</li>
-        <li>1 copy of Vaccine Book or Health Certificate</li>
-        <li>1 copy of previous School Report</li>
-        <li>1 copy of document showing child's previous name (if it has been changed)</li>
-      </ul>
-      <h4>Enrolment Application Form Instructions</h4>
-      <p>Please fill-in the enrollment form and provide all the necessary details. It is essential that we not only have your up-to-date home/mobile telephone number but also an <strong>up-to-date emergency contact number</strong> where we can reach a family member quickly.</p>
-      <p>When you have completed the application form, bring it together with the photo, document requirements and the fees to the school office.</p>
-      <h4>Items for Daily Preschool</h4>
-      <ul>
-        <li>Spare clothes</li>
-        <li>Towel</li>
-        <li>Toothbrush</li>
-        <li>Cap or hat</li>
-        <li>Water Bottle</li>
-      </ul>
-      <hr>
-      <h1>Tuition Fees</h1>
-    </article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 sticky-parent">
+          <aside class="sticky">
+            <ul>
+              <li>Admissions Procedure</li>
+              <li>Admissions Procedure</li>
+            </ul>
+          </aside>
+        </div>
+        <article class="col-lg-9">
+          <h1>Admissions Procedure</h1>
+          <p>Generally, we assess children for Admission on an individual case by case basis.For Primary School and
+            Middle
+            School, it may be necessary for children to take a reading and writing test. This is because in primary
+            school
+            children need to have at least a basic English reading and writing ability and at middle school they should
+            have mastered these skills. This will be determined by the class teacher.</p>
+          <p>The English curriculum is quite disciplined and fast moving with strict standards. The mode of teaching
+            and
+            learning is English Language for all curriculum subjects. Apart from the reading and writing test, children
+            may
+            be invited to observe the class for which they wish to enroll. This is so that your child can get a feel
+            for
+            the class and its ability, and for the Class Teacher to make an assessment.</p>
+          <h4>Photo and Document Requirements from New Children</h4>
+          <ul>
+            <li>Four photos (3.5 x 4.5 cm)</li>
+            <li>1 copy of Child’s Passport or Birth Certificate</li>
+            <li>1 copy of House Registration Book (Thai Blue Book)</li>
+            <li>1 copy of Parent’s Passport or ID card</li>
+            <li>1 copy of Vaccine Book or Health Certificate</li>
+            <li>1 copy of previous School Report</li>
+            <li>1 copy of document showing child's previous name (if it has been changed)</li>
+          </ul>
+          <h4>Enrolment Application Form Instructions</h4>
+          <p>Please fill-in the enrollment form and provide all the necessary details. It is essential that we not only
+            have your up-to-date home/mobile telephone number but also an <strong>up-to-date emergency contact number</strong>
+            where we can reach a family member quickly.</p>
+          <p>When you have completed the application form, bring it together with the photo, document requirements and
+            the
+            fees to the school office.</p>
+          <h4>Items for Daily Preschool</h4>
+          <ul>
+            <li>Spare clothes</li>
+            <li>Towel</li>
+            <li>Toothbrush</li>
+            <li>Cap or hat</li>
+            <li>Water Bottle</li>
+          </ul>
+          <hr>
+          <!-- Term Dates 2018-19 -->
+          <div class="table-responsive">
+            <table class="table">
+              <thead class="text-center thead-dark">
+                <tr>
+                  <th scope="col" colspan="3">Term Dates 2018-19</th>
+                </tr>
+                <tr>
+                  <th scope="col">Term</th>
+                  <th scope="col">Start Date</th>
+                  <th scope="col">End Date</th>
+                </tr>
+              </thead>
+              <tbody class="text-center">
+                <tr>
+                  <th scope="row">1<sup>st</sup></th>
+                  <td>31<sup>st</sup> August 2018</td>
+                  <td>6<sup>th</sup> December 2018</td>
+                </tr>
+                <tr>
+                  <th scope="row">2<sup>nd</sup></th>
+                  <td>9<sup>th</sup> January 2019</td>
+                  <td>5<sup>th</sup> April 2019</td>
+                </tr>
+                <tr>
+                  <th scope="row">3<sup>rd</sup></th>
+                  <td>23<sup>rd</sup> April 2019</td>
+                  <td>16<sup>th</sup> July 2019</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- End of Term Dates 2018-19 -->
+          <hr>
 
+          <!-- Tuition Fees 2018-19 -->
+          <div class="table-responsive">
+            <table class="table">
+              <thead class="text-center thead-dark">
+                <tr>
+                  <th scope="col" colspan=5>Tuition Fees &middot; Academic Year 2018-19</td>
+                </tr>
+                <tr>
+                  <th scope="col" colspan=2 class="align-middle">Year Level</th>
+                  <th scope="col">Admission Fee/Family</th>
+                  <th scope="col">Tuition Fee per Term</th>
+                  <th scope="col" class="align-middle">Days per Week</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <!-- Early Years Tuition Fee -->
+                  <th scope="row" rowspan=4 class="align-middle text-center eyfs-absolute-position">Early Years</th>
+                  <td rowspan=2 class="align-middle">Preschool A</td>
+                  <td rowspan=2 class="align-middle">&#3647; 50,000.00</td>
+                  <td>&#3647; 53,000.00</td>
+                  <td class="whitespace-nowrap">(9:00 AM - 2:00 PM) 3 days per week</td>
+                </tr>
+                <tr>
+                  <td>&#3647; 57,000.00</td>
+                  <td>(9:00 AM - 2:00 PM) 5 days per week</td>
+                </tr>
+                <tr>
+                  <td>Preschool B</td>
+                  <td>&#3647; 50,000.00</td>
+                  <td>&#3647; 62,000.00</td>
+                  <td rowspan=2 class="align-middle">(9:00 AM - 2:30 PM) 5 days per week</td>
+                </tr>
+                <tr>
+                  <td>Kindergarten</td>
+                  <td>&#3647; 50,000.00</td>
+                  <td>&#3647; 67,000.00</td>
+                </tr>
+                <!-- End of Early Years Tuition Fee -->
+                
+                <!-- Primary Tuition Fee -->
+                <tr>
+                  <th scope="row" rowspan=2 class="align-middle text-center eyfs-absolute-position">Primary</th>
+                  <td class="whitespace-nowrap">Key Stage 1 (Year 1 to 2)</td>
+                  <td>&#3647; 50,000.00</td>
+                  <td>&#3647; 72,000.00</td>
+                  <td rowspan=2 class="align-middle">(9:00 AM - 3:30 PM) 5 days per week</td>
+                </tr>
+                <tr>
+                  <td class="whitespace-nowrap">Key Stage 2 (Year 3 to 6)</td>
+                  <td>&#3647; 50,000.00</td>
+                  <td>&#3647; 77,000.00</td>
+                </tr>
+                <!-- End of Primary Tuition Fee -->
 
-    <div class="three-links">
-      <div class="container flex-links">
-        <a href="#">Enquire</a>
-        <a href="#">Enroll Now</a>
-        <a href="#">Book a visit</a>
+                <!-- Secondary Tuition Fee -->
+                <tr>
+                  <th scope="row" rowspan=2 class="align-middle text-center eyfs-absolute-position">Secondary</th>
+                  <td class="whitespace-nowrap">Key Stage 3 (Year 7 to 9)</td>
+                  <td>&#3647; 50,000.00</td>
+                  <td>&#3647; 90,000.00</td>
+                  <td rowspan=2 class="align-middle">(8:20 AM - 3:30 PM) 5 days per week</td>
+                </tr>
+                <tr>
+                  <td>Key Stage 4 (IGCSE)</td>
+                  <td>&#3647; 50,000.00</td>
+                  <td>&#3647; 110,000.00</td>
+                </tr>
+                <!-- End of Secondary Tuition Fee -->
+              </tbody>
+            </table>
+          </div>
+          <!-- End of Tuition Fees 2018-19 -->
+          <hr>
+
+          <!-- Required Fees -->
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead class="text-center thead-dark">
+                <tr>
+                  <th scope="col">Required Fee</th>
+                  <th scope="col">Primary</th>
+                  <th scope="col">Key Stage 3 & 4</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Book Fee</th>
+                  <td class="text-center">&#3647; 4,000.00</td>
+                  <td class="text-center">&#3647; 6,500.00</td>
+                </tr>
+                <tr>
+                  <th scope="row">Swimming Pool Care</th>
+                  <td colspan=2 class="text-center">&#3647; 2,500.00</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <!-- End of Required Fees -->
+
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead class="text-center thead-dark">
+                <tr>
+                  <th scope="col" colspan=2>Optional Fee</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Hot Meal (lunch)</th>
+                  <td colspan=2>&#3647; 6,000.00</td>
+                </tr>
+                <tr>
+                  <th scope="row">Transportation (depending on location)</th>
+                  <td colspan=2>&#3647; 8,000 - 19,000.00</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <hr>
+
+          <h1>School Hours, Term Dates</h1>
+          <div class="table-responsive">
+            <table class="table ">
+              <thead class="text-center thead-dark">
+                <tr>
+                  <th scope="col" colspan=2 class="align-middle">Level</th>
+                  <th scope="col" class="align-middle">Age (Years)</th>
+                  <th scope="col" class="align-middle">Days per week</th>
+                  <th scope="col" class="align-middle">Time</th>
+                  <th scope="col" class="align-middle">Remarks</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <!-- Early Years Foundation Stage (EYFS) -->
+                  <th scope="row" rowspan=4 class="align-middle eyfs-absolute-position">Early Years</th>
+                  <td class="whitespace-nowrap align-middle" rowspan=2>Preschool A</td>
+                  <td rowspan=2 class="align-middle">2 - 3</td>
+                  <td class="whitespace-nowrap">3 days</td>
+                  <td class="whitespace-nowrap">9:00 AM - 2:00PM</td>
+                  <td rowspan=2 class="align-middle">We will be accepting students who have turned <mark>2 years old</mark>
+                    on or
+                    before August 31st of the new academic year.</td>
+                </tr>
+                <tr>
+                  <td>5 days</td>
+                  <td>9:00 AM - 2:00PM</td>
+                </tr>
+                <tr>
+                  <td class="align-middle">Preschool B</td>
+                  <td class="align-middle">3 - 4</td>
+                  <td class="align-middle">5 days</td>
+                  <td class="align-middle">9:00 AM - 2:00PM</td>
+                  <td>We will be accepting students who have turned <mark>3 years old</mark> on or before August 31st of the new
+                    academic year.</td>
+                </tr>
+                <tr>
+                  <td class="align-middle">Kindergarten</td>
+                  <td class="align-middle">4 - 5</td>
+                  <td class="align-middle">5 days</td>
+                  <td class="align-middle">9:00 AM - 2:00PM</td>
+                  <td>We will be accepting students who have turned <mark>4 years old</mark> on or before August 31st of the new
+                    academic year.</td>
+                </tr>
+                <!-- End of Early Years Foundation Stage (EYFS) -->
+
+                <!-- Primary (Key Stage 1 & 2) -->
+                <tr>
+                  <th scope="row" rowspan=2 class="align-middle eyfs-absolute-position">Primary</th>
+                  <td class="whitespace-nowrap align-middle">Key Stage 1</td>
+                  <td class="align-middle">5 - 7</td>
+                  <td class="whitespace-nowrap align-middle">5 days</td>
+                  <td class="whitespace-nowrap align-middle">9:00 AM - 3:30PM</td>
+                  <td>We will be accepting students who have turned <mark>5 or 6 years old</mark> respectively on or before August 31st of the new academic year.</td>
+                </tr>
+                <tr>
+                  <td class="whitespace-nowrap align-middle">Key Stage 2</td>
+                  <td class="align-middle">8 - 11</td>
+                  <td class="whitespace-nowrap align-middle">5 days</td>
+                  <td class="whitespace-nowrap align-middle">9:00 AM - 3:30PM</td>
+                  <td>We will be accepting students who have turned <mark>7, 8, 9 and 10 years old</mark> respectively on or before August 31st of the new academic year.</td>
+                </tr>
+                <!-- End of Primary (Key Stage 1 & 2) -->
+
+                <!-- Secondary (Key Stage 3 & 4) -->
+                <tr>
+                  <th scope="row" rowspan=2 class="align-middle eyfs-absolute-position">Secondary</th>
+                  <td class="whitespace-nowrap align-middle">Key Stage 3</td>
+                  <td class="align-middle">11 - 14</td>
+                  <td class="whitespace-nowrap align-middle">5 days</td>
+                  <td class="whitespace-nowrap align-middle">8:20 AM - 3:30PM</td>
+                  <td>We will be accepting students who have turned <mark>11, 12 and 13 years old</mark> respectively on or before August 31st of the new academic year.</td>
+                </tr>
+                <tr>
+                  <td class="whitespace-nowrap align-middle">Key Stage 2</td>
+                  <td class="align-middle">14 - 16</td>
+                  <td class="whitespace-nowrap align-middle">5 days</td>
+                  <td class="whitespace-nowrap align-middle">8:20 AM - 3:30PM</td>
+                  <td>We will be accepting students who have turned <mark>14 and 15 years old</mark> respectively on or before August 31st of the new academic year.</td>
+                </tr>
+                <!-- End of Secondary (Key Stage 3 & 4) -->
+              </tbody>
+            </table>
+          </div>
+
+        </article>
+      </div>
+
+      <div class="three-links">
+        <div class="container flex-links">
+          <a href="#">Enquire</a>
+          <a href="#">Enroll Now</a>
+          <a href="#">Book a visit</a>
+        </div>
       </div>
     </div>
   </main>
